--- a/app-back/app/src/main/resources/application.properties
+++ b/app-back/app/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=create
 
+logging.level.root=INFO
+spring.output.ansi.enabled=ALWAYS
+
